[package]
name = "mp3lame-sys"
version = "0.1.0"
edition = "2021"
description = "Bindings to mp3lame library"
keywords = ["lame", "mp3", "mp3lame", "libmp3lame", "codec"]
categories = ["encoding", "external-ffi-bindings", "multimedia::audio", "multimedia::encoding"]
license = "LGPL"
include = [
    "src/*rs",
    "lame-3.100/",
    "Cargo.toml",
    "README.md",
    "LICENSE"
]

[dependencies.libc]
version = "0.2"
default-features = false

[target.'cfg(unix)'.build-dependencies.autotools]
version = "0.2.5"

[target.'cfg(windows)'.build-dependencies.cc]
version = "1.0.77"

[features]
# Include decoder code (it is under GPL license which is pretty shite)
decoder = []

[package.metadata.docs.rs]
features = ["decoder"]
