[package]
name = "mp3lame-sys"
version = "0.1.2"
edition = "2021"
repository = "https://github.com/DoumanAsh/mp3lame-sys"
description = "Bindings to mp3lame library"
keywords = ["lame", "mp3", "mp3lame", "libmp3lame", "codec"]
categories = ["encoding", "external-ffi-bindings", "multimedia::audio", "multimedia::encoding"]
license = "LGPL-3.0"
include = [
    "src/**",
    "lame-3.100/**",
    "Cargo.toml",
    "README.md",
    "LICENSE",
    "build.rs"
]

[dependencies.libc]
version = "0.2"
default-features = false

[target.'cfg(unix)'.build-dependencies.autotools]
version = "0.2.5"

[target.'cfg(windows)'.build-dependencies.cc]
version = "1.0.77"

[features]
# Include decoder code (it is under GPL license which is pretty shite)
decoder = []

[package.metadata.docs.rs]
features = ["decoder"]
